Fix checkstyle and pmd violations
git-svn-id: https://svn.apache.org/repos/asf/incubator/servicemix/trunk/deployables/serviceengines/servicemix-wsn2005@526601 13f79535-47bb-0310-9956-ffa450edef68